<resources>
    <string name="app_name">Cook It Yourself</string>
    <string name="title_activity_ready_for_cook">Just cook it</string>
    <string name="title_activity_recipe">Recipe name</string>
    <string name="ready_recipes">Just cook it</string>
    <string name="favorite_recipes">Favorites</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="exit_button">exit</string>
    <string name="not_available">This function is not available for a while</string>
    <string name="ready_recipes_header">Just cook it</string>
    <string name="button_1">Borsch</string>
    <string name="button_2">Vareniki</string>
    <string name="button_3">Plyatski</string>
    <string name="button_4">Pasta</string>
    <string name="button_5">Kotleti Po Kievski</string>
</resources>
