<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        style="@style/BackGroundImgStyle"
        android:src="@drawable/background_justcook" />

    <ScrollView style="@style/ScrollStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="ua.kiev.home.sergiosiniy.cookyourself.ReadyForCook">



            <Button
                style="@style/ButtonStyle"
                android:text="@string/button_1" />

            <Button
                style="@style/ButtonStyle"
                android:text="@string/button_2" />

            <Button
                style="@style/ButtonStyle"
                android:text="@string/button_3" />

            <Button
                style="@style/ButtonStyle"
                android:text="@string/button_4" />

            <Button
                style="@style/ButtonStyle"
                android:text="@string/button_5" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
